# nemotron-bubble

./: .gitignore  Cargo.toml  LICENSE  README.md
macos/: Package.swift  README.md  build-macos-app.sh  render-readme-assets.swift
macos/Resources/: Info.plist
macos/Sources/NemotronBubbleMac/: AppDelegate.swift  AudioCaptureController.swift  BubbleWindowController.swift  DictationController.swift  EngineClient.swift  HotKeyController.swift  LoginItemController.swift  PasteboardTyper.swift  Preferences.swift  SettingsWindowController.swift  WindowsVisualRenderer.swift
scripts/: download-nemotron.ps1  download-nemotron.sh
src/: main.rs
