[package]
name = "nemotron-bubble"
version = "0.1.0"
edition = "2024"

# The `assets` feature pulls in PNG/GIF encoders only for generating README art via
# `--render-assets`; the shipped app does not depend on them.
[features]
assets = ["dep:png", "dep:gif"]

[dependencies]
anyhow = "1"
base64 = "0.22"
cpal = "0.15"
crossbeam-channel = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
once_cell = "1"
parakeet-rs = "0.3.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
png = { version = "0.17", optional = true }
gif = { version = "0.13", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Media_Audio",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }
